--- a/index.html
+++ b/index.html
@@ -10,25 +10,33 @@
   <body>
     <header>
       <div class="logo-container">
-        <img src="./images/logo.png" alt="" />
+        <img src="./images/logo.png" alt="" class="logo" />
       </div>
       <div class="sign-up">
         <div>
           <a href="#">Sign In</a>
         </div>
-        <button class="try-btn">Try for free</button>
+        <a href="#" class="try-btn">Try for free</a>
       </div>
     </header>
     <main>
       <div class="section-1" style="justify-content: center">
         <div class="title-section">
-          <h1>Functional Music to Improve <span>Focus in 15 minutes</span></h1>
-          <p id="main-p">
-            Our science-first approach creates music that sounds different-and
-            affects your brain differently-than any other music.
-          </p>
+          <div class="title-section-info">
+            <h1>
+              Functional Music to Improve <span>Focus in 15 minutes</span>
+            </h1>
+            <p id="main-p">
+              Our science-first approach creates music that sounds different-and
+              affects your brain differently-than any other music.
+            </p>
+          </div>
           <img src="./images/clout.png" alt="" class="featured-logos" />
-          <button class="free-sessions-btn">Try 5 free sessions</button>
+          <div class="try-free-btn" >
+            <a class="free-sessions-btn" href="#">Try 5 free sessions</a>
+          </a>
+
+          </div>
         </div>
 
         <img
@@ -43,45 +51,48 @@
         <h3>Wanna see the science?</h3>
       </div>
       <div class="section-2">
-        <img
-          src="./images/picture-2.gif"
-          alt="a person wearing headphones and sound waves going through a colored brain in there head"
-        />
-        <h2>Patented Technology</h2>
-        <p>
-          Brain.fm holds patents on key processes for creating functional music,
-          including technology to elicit
-          <span>strong neural phase locking </span>--allowing populations of
-          neurons to engage in various kinds of coordinated activity-and
-          technology to remove distraction in sound.
-        </p>
-        <p>
-          This makes our music unique, purpose-built to steer vou into a desired
-          mental state. In other words, we've found new ways to create music
-          that helps you do what you need to do.
-        </p>
-        <p class="special-p">Explore More of Our Science</p>
-      </div>
-      <div class="section-2">
-        <img src="./images/picture-3.png" alt="" />
-        <h2>Tested on Brain and Behavior</h2>
-        <p>
-          Scientists at Brain.fm work with collaborators at academic
-          institutions to run experiments.
-        </p>
-        <p>
-          We look at the effects of our technology on the brain, using MRI and
-          EEG, and also run large-scale behavioral tests, measuring performance
-          on simple games.
-        </p>
-        <p>
-          <span
-            >Our experiments alwavs include a control condition
-            ('placebo')</span
-          >
-          of the same underlying music without Brain.fm technology applied, so
-          we can be sure our tech is what makes the difference
-        </p>
+        <div class="left-section-2">
+          <img
+            src="./images/picture-2.gif"
+            alt="a person wearing headphones and sound waves going through a colored brain in there head"
+          />
+
+          <h2>Patented Technology</h2>
+          <p>
+            Brain.fm holds patents on key processes for creating functional
+            music, including technology to elicit
+            <span>strong neural phase locking </span>--allowing populations of
+            neurons to engage in various kinds of coordinated activity-and
+            technology to remove distraction in sound.
+          </p>
+          <p>
+            This makes our music unique, purpose-built to steer vou into a
+            desired mental state. In other words, we've found new ways to create
+            music that helps you do what you need to do.
+          </p>
+          <p class="special-p">Explore More of Our Science</p>
+        </div>
+        <div class="right-section-2">
+          <img src="./images/picture-3.png" alt="" />
+          <h2>Tested on Brain and Behavior</h2>
+          <p>
+            Scientists at Brain.fm work with collaborators at academic
+            institutions to run experiments.
+          </p>
+          <p>
+            We look at the effects of our technology on the brain, using MRI and
+            EEG, and also run large-scale behavioral tests, measuring
+            performance on simple games.
+          </p>
+          <p>
+            <span
+              >Our experiments alwavs include a control condition
+              ('placebo')</span
+            >
+            of the same underlying music without Brain.fm technology applied, so
+            we can be sure our tech is what makes the difference
+          </p>
+        </div>
       </div>
     </main>
   </body>
